<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="accept">OK</string>
    <string name="add">Add</string>
    <string name="add_lunchdate">Add date</string>
    <string name="add_user">Add user</string>
    <string name="add_user_nfc_hint">Bring the NFC device closer or enter the ID manually</string>
    <string name="admin">Admin</string>
    <string name="all_users">All users</string>
    <string name="alternate_weeks">alternate weeks</string>
    <string name="and">and</string>
    <string name="attended">Attended</string>
    <string name="auth_user">Authorized user</string>
    <string name="calendar">Calendar</string>
    <string name="cancel">Cancel</string>
    <string name="clear_status">Clear status</string>
    <string name="close">Close</string>
    <string name="confirm">Confirm</string>
    <string name="dates_not_valid">Selected dates are not valid</string>
    <string name="day">Day</string>
    <string name="del_all_dates_range">Delete all dates of this range</string>
    <string name="del_lunchdate">Delete date</string>
    <string name="del_single_day">Delete just this date</string>
    <string name="del_user">Delete user</string>
    <string name="delete">Delete</string>
    <string name="dow_fri">Fri</string>
    <string name="dow_friday">Friday</string>
    <string name="dow_mon">Mon</string>
    <string name="dow_monday">Monday</string>
    <string name="dow_sat">Sat</string>
    <string name="dow_saturday">Saturday</string>
    <string name="dow_sun">Sun</string>
    <string name="dow_sunday">Sunday</string>
    <string name="dow_thu">Thu</string>
    <string name="dow_thursday">Thursday</string>
    <string name="dow_tue">Tue</string>
    <string name="dow_tuesday">Tuesday</string>
    <string name="dow_wed">Wed</string>
    <string name="dow_wednesday">Wednesday</string>
    <string name="edit">Edit</string>
    <string name="enable_nfc">Enable NFC to be able to use all the features of the application</string>
    <string name="error_lunchdate_add">Error creating new date</string>
    <string name="error_lunchdate_del">Error deleting date</string>
    <string name="error_lunchdate_from_gt_to">The start date cannot be greater than the end date</string>
    <string name="error_lunchdate_mod">Error updating date</string>
    <string name="error_lunchdate_range_size">The range cannot be more than 365 days long</string>
    <string name="error_lunchdates_del">Error deleting dates</string>
    <string name="error_lunchdates_get">Error loading dates</string>
    <string name="error_user_add">Error creating new user</string>
    <string name="error_user_del">Error deleting user</string>
    <string name="error_user_mod">Error updating user</string>
    <string name="error_user_nfc_assigned">This NFC device is already assigned to another user</string>
    <string name="error_user_shortname">Name and surname must be at least two characters long</string>
    <string name="error_users_get">Error loading users</string>
    <string name="from_lowercase">from</string>
    <string name="from_uppercase">From</string>
    <string name="insert_name">Insert a name</string>
    <string name="insert_surname">Insert a surname</string>
    <string name="license"><b>Chasc</b> by Virgilio Gómez is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC BY-NC-SA 4.0). To view a copy of the license, visit <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode">https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode</a>\n\nYou can find the app code published at\n<a href="https://github.com/VirgilioGM/Chasc">https://github.com/VirgilioGM/Chasc</a></string>
    <string name="loading">Loading&#8230;</string>
    <string name="logout">Logout</string>
    <string name="lunchdate_added">Date added</string>
    <string name="lunchdate_modified">Date modified</string>
    <string name="lunchdate_deleted">Date deleted</string>
    <string name="lunchdates_added">Dates added</string>
    <string name="lunchdates_deleted">Dates deleted</string>
    <string name="lunchtime">Lunch time!</string>
    <string name="name">Name</string>
    <string name="nfc">NFC</string>
    <string name="nfc_disabled">NFC is disabled</string>
    <string name="no_results">There are no results matching your search</string>
    <string name="no_show">No show</string>
    <string name="no_user_nfc">No user linked to this NFC device</string>
    <string name="no_users">There are no users to show</string>
    <string name="noauth_user">Unauthorized user</string>
    <string name="one_day">One day</string>
    <string name="range">Rango</string>
    <string name="required_fields_warning">* Mandatory fields</string>
    <string name="save">Save</string>
    <string name="select_action">Select action</string>
    <string name="settings">Settings</string>
    <string name="sure">Are you sure?</string>
    <string name="surname">Surname</string>
    <string name="to_lowercase">to</string>
    <string name="to_uppercase">To</string>
    <string name="total">Total</string>
    <string name="user">User</string>
    <string name="user_added">User added</string>
    <string name="user_modified">User modified</string>
    <string name="user_deleted">User deleted</string>


    <!-- Not translatable -->
    <string name="app_name" translatable="false">Chasc</string>
    <string name="required_fields_symbol" translatable="false">*</string>
    <string name="hamburger_icon" translatable="false">&#9776;</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">398924907243078</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb398924907243078</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">PHzbLfg26Pr3nLhUgshYJhS0V</string>
    <string name="twitter_consumer_secret" translatable="false">H9lxhqLylH3zN9DHt2Rn6Q61Um9LyM9TBILblyWB0yFGfTW8xS</string>
</resources>
