<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.virgilio.chasc.UsersOneScheduleForm">

    <TextView
        android:id="@+id/lblUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:text="@string/user"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblUser"
        android:layout_alignBottom="@+id/lblUser"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@+id/lblUser"
        android:layout_toRightOf="@+id/lblUser"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/rgType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rbRange"
        android:orientation="horizontal"
        android:layout_below="@+id/lblUser"
        android:layout_marginTop="30dp"
        android:paddingLeft="@dimen/fab_margin"
        android:paddingRight="@dimen/fab_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <RadioButton
            android:id="@+id/rbRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/range" />

        <RadioButton
            android:id="@+id/rbDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one_day" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rgType"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:text="@string/from_uppercase"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvFrom"
        android:layout_alignBottom="@+id/tvFrom"
        android:layout_toEndOf="@+id/tvFrom"
        android:layout_toRightOf="@+id/tvFrom"
        android:ems="10"
        android:focusable="false"
        android:clickable="true"
        android:inputType="date" />

    <TextView
        android:id="@+id/tvTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFrom"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/etFrom"
        android:layout_toStartOf="@+id/etFrom"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:text="@string/to_uppercase"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTo"
        android:layout_alignBottom="@+id/tvTo"
        android:layout_toEndOf="@+id/tvTo"
        android:layout_toRightOf="@+id/tvTo"
        android:ems="10"
        android:focusable="false"
        android:clickable="true"
        android:inputType="date" />

    <LinearLayout
        android:id="@+id/dows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etTo"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbMon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:padding="12dp"
            android:paddingBottom="12dp"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/dow_mon"
            android:textAlignment="center" />

        <CheckBox
            android:id="@+id/cbTue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:padding="12dp"
            android:paddingBottom="12dp"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/dow_tue"
            android:textAlignment="center" />

        <CheckBox
            android:id="@+id/cbWed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:padding="12dp"
            android:paddingBottom="12dp"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/dow_wed"
            android:textAlignment="center" />

        <CheckBox
            android:id="@+id/cbThu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:padding="12dp"
            android:paddingBottom="12dp"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/dow_thu"
            android:textAlignment="center" />

        <CheckBox
            android:id="@+id/cbFri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:padding="12dp"
            android:paddingBottom="12dp"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/dow_fri"
            android:textAlignment="center" />

        <CheckBox
            android:id="@+id/cbSat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:padding="12dp"
            android:paddingBottom="12dp"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/dow_sat"
            android:textAlignment="center" />

        <CheckBox
            android:id="@+id/cbSun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:padding="12dp"
            android:paddingBottom="12dp"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/dow_sun"
            android:textAlignment="center" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/cbAlt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dows"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/alternate_weeks" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cbAlt"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:onClick="confirm"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/cbAlt"
        android:layout_marginRight="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="20dp"
        android:onClick="cancel"
        android:text="@string/cancel" />

</RelativeLayout>
