<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnEdit"
        style="@style/CustomSmallButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_primary"
        android:text="@string/edit"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnCalendar"
        style="@style/CustomSmallButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_primary"
        android:text="@string/calendar"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnDelete"
        style="@style/CustomSmallButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_danger"
        android:text="@string/delete"
        android:textAllCaps="false"/>

</LinearLayout>