<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.virgilio.chasc.UsersOneNfcForm">

    <TextView
        android:id="@+id/lblUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/user"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblUser"
        android:layout_alignBottom="@+id/lblUser"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@+id/lblUser"
        android:layout_toRightOf="@+id/lblUser"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/lblNfc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUser"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/tvUser"
        android:layout_toStartOf="@+id/tvUser"
        android:text="@string/nfc"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvNfc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblNfc"
        android:layout_alignBottom="@+id/lblNfc"
        android:layout_alignLeft="@+id/tvUser"
        android:layout_alignStart="@+id/tvUser"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="cancel"
        android:text="@string/close"
        android:layout_below="@+id/tvNfc"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
